adding new line on index.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi impedit odio, iste, incidunt eligendi maiores quis perferendis quae dicta voluptatum nihil praesentium tempore odit rerum accusantium ut cupiditate saepe beatae!
     </p>
+
+    <p>
+        add new thing
+    </p>
 </body>
 
 
